# mozperftest-tools

./: .gitignore  README.md  artifact_downloader.py  gen_backfill_report.py  gen_backfill_report_v2.py  generate_graph_average_bug_resolution_time.py  generate_side_by_side.py  generate_side_by_side_standalone.py  generate_status_update_report.py  generate_test_report.py  get_mozilla_central_commit.py  pyproject.toml  requirements.txt  task_processor.py
fenix-retrieval/: README.md  applink-p2.csv  csv_gen_reqs.txt  generate_applink_data.py
high-value-tests/: generate_high_value_tests.py  sql_query.txt  tp6m_regressions_2020_03_12_desktop.csv  tp6m_regressions_2020_03_12_mobile.csv
lull-scheduler/: lull_scheduler.py  sample_live_sites.json
mozperftest_tools/: README.md  script.py  setup.py
mozperftest_tools/mozperftest_tools/: lull_scheduler.py  profile_enhancer.py  regression_detector.py  side_by_side.py
mozperftest_tools/mozperftest_tools/utils/: artifact_downloader.py  task_processor.py  utils.py
pageload-summary/: summarize.py  summarize_old.py  summarize_testing.py
pageload-summary/here/: newest-points.csv  test.csv
variance-analysis/: Dockerfile  README.md  ptnb-config-linux-new.yml  run_variance_analysis.py  variance_analysis.py
variance-analysis/artifactdownloader/: README.md  artifact_downloader.py  task_processor.py
variance-analysis/mach_perftest_notebook_dev/: .gitignore  .travis.yml  README.md  requirements.txt  setup.py  template.html  template_upload_file.html
variance-analysis/mach_perftest_notebook_dev/perftestnotebook/: analyzer.py  (+8 more)
(+5 files in other folders)
